# 0701-demo

./: README.md
demo/: Cargo.toml  Makefile  a.out  blobstore.bc  blobstore.ii  blobstore.s  build-verbose.txt  build-verbose2.txt  build-verbose3.txt  build.rs  main.bc  main.ii  main.s
demo/src/: blobstore.cc  main.cpp  main.rs
