[package]
name = "demo"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Toy project from https://github.com/dtolnay/cxx"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/dtolnay/cxx"

[dependencies]
cxx = "1.0.121"
termcolor="1.4.1"

[build-dependencies]
cxx-build = "1.0.121"
